perf: 설정파일 개선